--- a/programs/trade/Cargo.toml
+++ b/programs/trade/Cargo.toml
@@ -19,3 +19,4 @@ default = []
 anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
 anchor-spl = "0.29.0"
 pyth-sdk-solana = "0.10.1"
+solana-program = "1.18.12"
